added the leavetype maximumum number of days
