# schemas/leaveType.js
@@ -2,9 +2,11 @@ import { Schema,model } from "mongoose";
 
 
 const leaveTypeSchema = Schema({
-    leaveType:{type:String, required: true},
-    description:{type:String, required: true},
-})
+    leaveType: { type: String, required: true },
+    description: { type: String, required: true },
+    daysAllowed: { type: Number, required: true } 
+});
+
 
 
 const LeaveType = model("LeaveType", leaveTypeSchema)
